# codepilot-coding-agent

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/real-scenario/: history_output.txt  logs_output.txt  report.html  run_output.txt
artifacts/real-scenario/demo_repo/: README.md
docs/: 01-project-development.md  02-technical-route.md  03-iteration-plan.md  04-testing-strategy.md  05-development-playbook.md  06-usage-guide.md
docs/plans/: codex-evolution-roadmap.md  sprint1-implementation.md
docs/reports/: Lab3实验报告_刘宇轩_2023112455.doc  Lab3实验报告_刘宇轩_2023112455.docx  Lab3实验报告_刘宇轩_2023112455.md
requirements/: README.md  dev.txt  runtime.txt
scripts/: bootstrap.py
src/codepilot/: __init__.py  cli.py
src/codepilot/core/: __init__.py  config.py  models.py
src/codepilot/eval/: __init__.py  adapters.py  benchmark.py  swebench.py
src/codepilot/ui/: __init__.py  (+2 more)
tests/blackbox/: test_blackbox_cases.py
tests/fixtures/: coding_benchmark_suite.json
tests/unit/: test_apps_dataset_adapter.py  test_benchmark_dataset_adapters.py  test_benchmark_evaluation.py  test_capabilities.py  test_cli.py  test_config.py  test_deepseek_api.py  test_executor_shell.py  test_filesystem_tools.py  test_github_api.py  test_guard.py  test_harness.py  test_models.py  test_plan_execute.py  test_python_interpreter.py  test_runtime_failure_hints.py  test_runtime_session.py  test_runtime_sprint2.py  test_search_tools.py  test_session_store.py  test_shell_executor.py  test_swebench_runner.py  test_tui.py  test_workspace_inspector.py
tests/whitebox/: test_whitebox_branches.py
(+22 files in other folders)
