[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codepilot-coding-agent"
version = "0.1.0"
description = "A from-scratch Coding Agent prototype for software engineering labs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "neko-claw" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.11.0",
  "pylint>=3.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/codepilot"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85

[tool.pylint.main]
py-version = "3.11"
ignore-paths = ["tests/.*"]

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 6
